# hamster-app

./: .editorconfig  .gitignore  NOTICE  README.md  bun.lockb  index.html  index_connection_prompt.html  package.json  tsconfig.app.json  vite.config.ts
src/: App.tsx  ConnectionPrompt.tsx  main_ConnectionPrompt.tsx  vite-env.d.ts
src-pywebview/: README.md  main.py  pyproject.toml
src-pywebview/src/hamster_app_py/: app.py  app_api.py
src-pywebview/src/hamster_app_py/svn/: checkout.py  common.py  list_svn.py
src/pages/main_page/: MainRepoPage.tsx
